force-app/main/default/objects/Inventory__c/Inventory__c.object-meta.xml
<CustomObject>
    <description>Physical Inventory of a specific item that is located at a specific location.  The sum of all inventory at a location represents the Onhand Inventory for a given location</description>
    <label>Inventory</label>
    <nameField>
        <label>Inventory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inventory</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>