force-app/main/default/objects/Inventory__c/fields/sm_Date_Expired__c.field-meta.xml
<CustomField>
    <fullName>sm_Date_Expired__c</fullName>
    <description>This value represents the default expiration date of the item.  It will be set by the flow when the item is created.</description>
    <label>Date Expired</label>
    <type>Date</type>
</CustomField>