force-app/main/default/objects/Inventory__c/fields/sm_Inventory_Item__c.field-meta.xml
<CustomField>
    <fullName>sm_Inventory_Item__c</fullName>
    <description>The Inventory Item this entry is tracking.  The quantity here will be rolled up to calculate the total Onhand Inventory</description>
    <inlineHelpText>Select the Inventory Item you are representing.</inlineHelpText>
    <label>Inventory Item</label>
    <referenceTo>sm_Inventory_Item__c</referenceTo>
    <relationshipLabel>Inventory</relationshipLabel>
    <relationshipName>Inventory</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>