force-app/main/default/objects/Inventory__c/fields/sm_Quantity__c.field-meta.xml
<CustomField>
    <fullName>sm_Quantity__c</fullName>
    <description>The Quantity in the Unit of Measure for the product.</description>
    <inlineHelpText>Enter the Quantity in the Unit of Measure for the Product</inlineHelpText>
    <label>Quantity</label>
    <precision>12</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>